Standard error, here we come!

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -277,3 +277,30 @@
 	note = {Page Version ID: 861600386},
 	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\A6C6J5P3\\index.html:text/html}
 }
+
+@misc{ums,
+	title = {{UM} {Salary}.info - {University} of {Michigan} {Salary} {Information}},
+	url = {http://www.umsalary.info/deptsearch.php?Dept=athletics&Year=0&Campus=0},
+	urldate = {2018-10-10},
+	file = {UM Salary.info - University of Michigan Salary Information:C\:\\Users\\Myriam\\Zotero\\storage\\W76R4Y98\\deptsearch.html:text/html}
+}
+
+@misc{jim,
+	title = {The 25 {Highest}-{Paid} {College} {Coaches} of 2018},
+	url = {https://thebestschools.org/magazine/highest-paid-college-coaches/},
+	abstract = {Which college coaches earn the most money? Here are the top 25, several of whom are the highest paid state employees in their state. Are they worth their salaries?},
+	language = {en-US},
+	urldate = {2018-10-10},
+	journal = {TheBestSchools.org},
+	author = {Writers, Staff},
+	month = mar,
+	year = {2018},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\YP2XL3EP\\highest-paid-college-coaches.html:text/html}
+}
+
+@misc{mendel,
+	title = {Gregor {Mendel} (1822-1884) :: {DNA} {Learning} {Center}},
+	url = {https://www.dnalc.org/view/16151-Biography-1-Gregor-Mendel-1822-1884-.html},
+	urldate = {2018-10-10},
+	file = {Gregor Mendel (1822-1884) \:\: DNA Learning Center:C\:\\Users\\Myriam\\Zotero\\storage\\9G4W38GE\\16151-Biography-1-Gregor-Mendel-1822-1884-.html:text/html}
+}
